# pico-baremetal

./: .cproject  .project  CMakeLists.txt  README.md
doc/: shell.drawio
include/: console.h  main.h  types.h
lib/shell/: CMakeLists.txt
lib/shell/include/: shell.h
lib/shell/src/: shell.c
modules/shell/: CMakeLists.txt
modules/shell/include/: shell_porting.h
modules/shell/src/: shell.c
src/: main.c  pico-baremetal.c
